Dungeon-RPG: Add root entity, basic combat rules and dungeon room
	prime_entity class added with the generalest attributes
	combat class added with attack() method with melee damage system
	dungeon class added in which entites can be placed and moved

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-.pytest_cache
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+
+# Virtual environments
+.venv/
+
+# Poetry build artifacts
+build/
+dist/
+
+# Pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# IDEs
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
