--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "dungeon_rpg", from = "src"}]
 
-
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+dungeon-rpg = "dungeon_rpg.main:main"
